required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk): 
---------------------------- 

- Fixed FCGI on Windows problem related to lexer (#3812)

- KML: Add ows/kml_exclude_items (#3560)

- Removed all refs left to MS_SYMBOL_CARTOLINE (#3798)

- Removed GAP, PATTERN, LINECAP/JOIN and POSITION from symbolObj (#3797)

- Fixed handling of STYLEITEM AUTO label position codes 10,11,12 (#3806)

- Fixed msGEOSGeometry2Shape to handle 'GEOMETRYCOLLECTION EMPTY' 
  as null geometry instead of raising an error (#3811)

- Re-added the MYSQL JOIN support. Had been removed with the MYGIS 
  deprecated driver.

- Add opacity to legend (#3740)

- Updated PHP/MapScript with the new objects properties (#3735)

- KML: set layer's projection when it is not defined (#3809)

- Updated xml mapfile schema and xsl with the new lexer properties (#3735)

- Updated PHP/MapScript for MS RFC 69: clustering. (#3700)

- Move allocation of cgiRequestObj paramNames/Values to msAllocCgiObj() (#1888)

- Add support for simple aggregates for the cluster layer attributes (#3700)

- Improved error reporting in msSaveImage() (#3733)

- configure: look for libxslt.so under lib64 as well

- added missing ';' before charset in WFS DEscribeFeatureType header (#3793)

- add brushed line support for agg renderer (#3792)

- fix bug with marker symbols along offset line

- fix for the cluster layer returning invalid feature count (#3794)

- remove some compiler warnings

- fix incorrect scaling of hatch symbol spacing (#3773)

- fix incorrect background color for INIMAGE exceptions (#3790)

Version 6.0.0-beta4 (2011-03-30)
--------------------------------
